Update SpringController.java